added new classes for the pdf region extraction. Took this occasion to refactor slightly the pdfimporter io function